# reddit-scrapper

./: .gitignore  Dockerfile  docker-compose.yml  frontend.Dockerfile  graphql.Dockerfile  grpc.Dockerfile  grpc.docker-compose.yml  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/src/: App.js
helm/reddit/: Chart.yaml  values.yaml
helm/reddit/templates/: _helpers.tpl  celery-beat.yml  celery-worker.yml  frontend.yml  graphql.yml  grpc.yml  ingress.yml  metric_exporter.yml
protobuf/: project.proto
reddit_scrapper/: celery_app.py  metric_exporter.py  metrics.py  prometheus.yml  tasks.py
service/: ariadne_client.py  client.py  schema.graphql  server.py
service/protobuf/: project_pb2.py  project_pb2_grpc.py
spark/: dump_csv.py  spark_pipeline.py
